welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: not found: value get
      setPos(0,get(X)+1)
               ^Diagonal:16: error: not found: value X
      setPos(0,get(X)+1)
                   ^Diagonal:26: error: type mismatch;
 found   : Unit
 required: Int
    compteur = compteur = 1
                        ^